Sat Sep 21 20:11:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_fork_internal): remove cloexec setting on pipes
	  created by rb_cloexec_pipe.  patch by normalperson (Eric Wong) at
	  [ruby-core:56523].  [Bug #8769]

Sat Sep 21 01:04:25 2013  Zachary Scott  <e@zzak.io>

	* lib/benchmark.rb: [DOC] grammar of Benchmark#bm [Bug #8888]
	  Patch by Prathamesh Sonpatki

Sat Sep 21 00:50:02 2013  Zachary Scott  <e@zzak.io>

	* enumerator.c: [DOC] Enumerator#each arguments documentation [GH-388]
	  Patch by @kachick  https://github.com/ruby/ruby/pull/388

Sat Sep 21 00:49:16 2013  Zachary Scott  <e@zzak.io>

	* enum.c: [DOC] Enumerable#to_a accepts arguments [GH-388]
	  Patch by @kachick https://github.com/ruby/ruby/pull/388

Sat Sep 21 00:47:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_conv_enc_opts): make sure to scan coderange to get
	  rid of unnecessary conversion.

Sat Sep 21 00:21:08 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/ssl.rb: [DOC] Document OpenSSL::SSLServer
	  Based on a patch by Rafal Lisowski [Bug #8758]

Fri Sep 20 23:54:03 2013  Zachary Scott  <e@zzak.io>

	* lib/gserver.rb: [DOC] correct gserver.rb license [Bug #8913]

Fri Sep 20 23:48:34 2013  Zachary Scott  <e@zzak.io>

	* ext/psych/yaml/yaml.h: [DOC] merge upstream typo fix by @GreenGeorge
	  https://github.com/tenderlove/psych/pull/161

Fri Sep 20 23:37:40 2013  Zachary Scott  <e@zzak.io>

	* lib/securerandom.rb: [DOC] SecureRandom.hex length argument
	  [Fixes GH-394] Patch by @avdi https://github.com/ruby/ruby/pull/394

Fri Sep 20 23:34:48 2013  Zachary Scott  <e@zzak.io>

	* benchmark/bm_app_answer.rb: removed duplicate code [Fixes GH-393]
	  Patch by @gouravtiwari https://github.com/ruby/ruby/pull/393

Fri Sep 20 23:24:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (btest, btest-ruby, test-knownbug): add $(RUN_OPTS) to
	  ruby to be run, so that tests are runnable before making exts.
